--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "license": "ISC",
     "dependencies": {
         "body-parser": "^1.19.0",
+        "cors": "^2.8.5",
         "express": "^4.17.1",
         "md5": "^2.3.0",
         "nodemon": "^2.0.4",
