--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "dependencies": {
         "body-parser": "^1.19.0",
         "cors": "^2.8.5",
+        "dotenv": "^10.0.0",
         "express": "^4.17.1",
+        "google-auth-library": "^7.3.0",
         "md5": "^2.3.0",
         "nodemon": "^2.0.4",
         "sqlite3": "^5.0.0"
